make sure buttons aren't hiding on small devices

--- a/App/wwwroot/css/app.css
+++ b/App/wwwroot/css/app.css
@@ -28,6 +28,7 @@ app {
 
 .main {
     flex: 1;
+    margin-bottom: 10rem;
 }
 
     .main .top-row {
